@@ -2,6 +2,14 @@ GNU grep NEWS                                    -*- outline -*-
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+** Bug fixes
+
+  With -P, patterns like [\d] now work again.  The fix relies on PCRE2
+  support for the PCRE2_EXTRA_ASCII_BSD flag planned for PCRE2 10.43.
+  With PCRE2 version 10.42 or earlier, behavior reverts to that of
+  grep 3.8, in that patterns like \w and \b use ASCII rather than
+  Unicode interpretations.
+
 
 * Noteworthy changes in release 3.10 (2023-03-22) [stable]
 
